一刷红宝书 3day 10

--- a/读书记/一刷红宝书/笔记.md
+++ b/读书记/一刷红宝书/笔记.md
@@ -962,7 +962,7 @@ js自带垃圾回收
 
 ### 阅读此书的目的是为了拓展知识面，而不是为了对一些已经知道的基础知识的巩固，对于一些api死记不如实践
 
-## 面向对象
+## 第六章面向对象
 
 ### 属性类型
 
@@ -998,3 +998,304 @@ true。
 - 给原型添加方法的代码一定要放在替换原型的语句之后
 - 在通过原型链实现继承时，不能使用对象字面量创建原型方法。因为这
 样做就会重写原型链
+
+## 第七章函数表达式
+
+- 函数声明会提示，函数表达式不会提示
+- 匿名函数又叫拉姆达函数
+- 不要在if语句中使用函数声明，可用函数表达式
+- 对于递归函数，不要赋值给其他变量，会导致内部递归函数调用问题，内部函数应该使用arguments.callee，但是严格模式下不能使用，最佳建议如下,使用命名函数表达式，这样就不会导致赋值时函数名问题
+
+```递归
+let foo = (function f(num){
+  if (num<=1) return 1;
+  else return num * f (num - 1);
+})
+```
+
+```compare
+function compare(value1, value2){ 
+ if (value1 < value2){ 
+ return -1; 
+ } else if (value1 > value2){ 
+ return 1; 
+ } else { 
+ return 0; 
+ } 
+} 
+var result = compare(5, 10);
+```
+
+- 在创建 compare()函数
+时，会创建一个预先包含全局变量对象的作用域链，这个作用域链被保存在内部的`[[Scope]]`属性中。
+- 当调用 compare()函数时，会为函数创建一个执行环境，然后通过复制函数的`[[Scope]]`属性中的对
+象构建起执行环境的作用域链。
+- 此后，又有一个活动对象（在此作为变量对象使用）被创建并被推入执
+行环境作用域链的前端。
+- 作用域链本质上是一个指向变量对象的指针列表，它只
+引用但不实际包含变量对象
+- 闭包只能取得包含函数中任何变量的最
+后一个值。别忘了闭包所保存的是整个变量对象，而不是某个特殊的变量
+- 匿名函数的执行环境具有全局性，因此其 this 对象通常指向 window
+- 每个函数在被调用时都会自动取得两个特殊变量：this 和 arguments。内部函
+数在搜索这两个变量时，只会搜索到其活动对象为止，因此永远不可能直接访问外部函数中的这两个变
+量
+
+```this
+var name = "The Window"; 
+var object = { 
+ name : "My Object", 
+ getName: function(){ 
+ return this.name; 
+ } 
+};
+object.getName(); //"My Object" 
+(object.getName)(); //"My Object" 
+(object.getName = object.getName)(); //"The Window"，在非严格模式下
+```
+
+第一行代码跟平常一样调用了 object.getName()，返回的是"My Object"，因为 this.name
+就是 object.name。第二行代码在调用这个方法前先给它加上了括号。虽然加上括号之后，就好像只
+是在引用一个函数，但 this 的值得到了维持，因为 object.getName 和(object.getName)的定义
+是相同的。第三行代码先执行了一条赋值语句，然后再调用赋值后的结果。因为这个赋值表达式的值是
+函数本身，所以 this 的值不能得到维持，结果就返回了"The Window"。
+
+记住赋值表达式返回的永远是值，没有引用的关系，即对象与属性的关系
+
+- 闭包的引用关系，可能导致内存泄漏
+- 要手动解除引用
+- 匿名函数创建的闭包环境在结束运行时就会被释放
+- 在闭包内创建的变量，如果没有返回出去那就是私有变量，通过对外部返回一个函数用来操作闭包内部的变量的函数叫做特权方法
+- 所以可以利于闭包创建私有变量
+- 特权方法必须使用构造函数
+- 静态私有变量，其特权方法定义在原型上
+
+## 第八章BOM
+
+- 以 window 作为其 Global 对象
+- 全局作用域下var定义的变量与函数会被自动归到window下
+- 定义全局变量与在 window 对象上直接定义属性还
+是有一点差别：全局变量不能通过 delete 操作符删除，而直接在 window 对象上的定义的属性可以
+- 全局定义的变量其configurable默认为false
+- IE 浏览器不允许通过 window.property = value 之类
+的形式，直接在 window 对象上创建新的属性或方法。可是，在全局作用域中声明的
+所有变量和函数，照样会变成 window 对象的成员
+- 每个框架都有自己的window，都被保存在了frames中
+- top为最顶层的页面的window，其frames保存所有框架的window
+- window.parent为当前页面的父页面
+- 没有框架的情况下window==window.parent=top
+- self==window，且可以通过window.parent与window.top访问对应框架的window
+- window.screenLeft...窗口位置
+- window.innerWidth...窗口大小
+- window.open()打开弹窗，还有各种弹窗的设置，不过现在已经不推荐，浏览器对弹窗限制
+- setTimeout，setInterval。。。
+- 系统对话框alert、confirm、prompt，其中confirm、prompt可以获取用户对对话框的操作结果
+- window.location对象提供了与当前窗口中加载的文档有关的信息，还提供了一
+些导航功能，能获取一些url参数
+- window.navigator对象识别客户端浏览器的事实标
+准，关于用户浏览器一些相关信息
+- navigator.plugins用户浏览器插件列表
+- window.screen 对象基本上只
+用来表明客户端的能力，其中包括浏览器窗口外部的显示器的信息，如像素宽度和高度等
+- window.history用户上网的历史记录，不能查看访问过的网站，不过可以操作浏览器前进后退到历史记录，history 对象还有一个 length 属性，保存着历史记录的数量
+
+```history
+//后退一页
+history.go(-1); 
+//前进一页
+history.go(1); 
+//前进两页
+history.go(2);
+//后退一页
+history.back(); 
+//前进一页
+history.forward();
+if (history.length == 0){ 
+ //这应该是用户打开窗口后的第一个页面
+}
+```
+
+## 第九章客户端检测
+
+- 能力检测，就是检测浏览器是否支持所用的api
+
+能力检测的目标不是
+识别特定的浏览器，而是识别浏览器的能力。采用这种方式不必顾及特定的浏览器如何如何，只要确定
+浏览器支持特定的能力，就可以给出解决方案
+
+- 怪癖检测，用于检测一些浏览器历史带来的bug问题
+
+- 用户代理检测，这是客户端检测的最后一种方案，很复杂，依赖于用户代理字符串`Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en) AppleWebKit/124 (KHTML, like Gecko) 
+ Safari/125.1`比如这一串东西，用于检测具体的浏览器和版本以及呈现引擎，由于历史原因，此字符串很复杂检测起来很麻烦，各个浏览器需要单独检测
+
+```用户代理检测
+var client = (function () {
+//呈现引擎
+var engine = {
+  ie: 0,
+  gecko: 0,
+  webkit: 0,
+  khtml: 0,
+  opera: 0,
+
+  //完整的版本号
+  ver: null,
+}
+//浏览器
+var browser = {
+  //主要浏览器
+  ie: 0,
+  firefox: 0,
+  safari: 0,
+  konq: 0,
+  opera: 0,
+  chrome: 0,
+
+  //具体的版本号
+  ver: null,
+}
+//平台、设备和操作系统
+var system = {
+  win: false,
+  mac: false,
+  x11: false,
+
+  //移动设备
+  iphone: false,
+  ipod: false,
+  ipad: false,
+  ios: false,
+  android: false,
+  nokiaN: false,
+  winMobile: false,
+
+  //游戏系统
+  wii: false,
+  ps: false,
+}
+
+//检测呈现引擎和浏览器
+var ua = navigator.userAgent
+if (window.opera) {
+  engine.ver = browser.ver = window.opera.version()
+  engine.opera = browser.opera = parseFloat(engine.ver)
+} else if (/AppleWebKit\/(\S+)/.test(ua)) {
+  engine.ver = RegExp['$1']
+  engine.webkit = parseFloat(engine.ver)
+
+  //确定是 Chrome 还是 Safari
+  if (/Chrome\/(\S+)/.test(ua)) {
+    browser.ver = RegExp['$1']
+    browser.chrome = parseFloat(browser.ver)
+  } else if (/Version\/(\S+)/.test(ua)) {
+    browser.ver = RegExp['$1']
+    browser.safari = parseFloat(browser.ver)
+  } else {
+    //近似地确定版本号
+    var safariVersion = 1
+    if (engine.webkit < 100) {
+      safariVersion = 1
+    } else if (engine.webkit < 312) {
+      safariVersion = 1.2
+    } else if (engine.webkit < 412) {
+      safariVersion = 1.3
+    } else {
+      safariVersion = 2
+    }
+
+    browser.safari = browser.ver = safariVersion
+  }
+} else if (/KHTML\/(\S+)/.test(ua) || /Konqueror\/([^;]+)/.test(ua)) {
+  engine.ver = browser.ver = RegExp['$1']
+  engine.khtml = browser.konq = parseFloat(engine.ver)
+} else if (/rv:([^\)]+)\) Gecko\/\d{8}/.test(ua)) {
+  engine.ver = RegExp['$1']
+  engine.gecko = parseFloat(engine.ver)
+
+  //确定是不是 Firefox
+  if (/Firefox\/(\S+)/.test(ua)) {
+    browser.ver = RegExp['$1']
+    browser.firefox = parseFloat(browser.ver)
+  }
+} else if (/MSIE ([^;]+)/.test(ua)) {
+  engine.ver = browser.ver = RegExp['$1']
+  engine.ie = browser.ie = parseFloat(engine.ver)
+}
+//检测浏览器
+browser.ie = engine.ie
+browser.opera = engine.opera
+//检测平台
+var p = navigator.platform
+system.win = p.indexOf('Win') == 0
+system.mac = p.indexOf('Mac') == 0
+system.x11 = p == 'X11' || p.indexOf('Linux') == 0
+//检测 Windows 操作系统
+if (system.win) {
+  if (/Win(?:dows )?([^do]{2})\s?(\d+\.\d+)?/.test(ua)) {
+    if (RegExp['$1'] == 'NT') {
+      switch (RegExp['$2']) {
+        case '5.0':
+          system.win = '2000'
+          break
+        case '5.1':
+          system.win = 'XP'
+          break
+        case '6.0':
+          system.win = 'Vista'
+          break
+        case '6.1':
+          system.win = '7'
+          break
+        default:
+          system.win = 'NT'
+          break
+      }
+    } else if (RegExp['$1'] == '9x') {
+      system.win = 'ME'
+    } else {
+      system.win = RegExp['$1']
+    }
+  }
+}
+//移动设备
+system.iphone = ua.indexOf('iPhone') > -1
+system.ipod = ua.indexOf('iPod') > -1
+system.ipad = ua.indexOf('iPad') > -1
+system.nokiaN = ua.indexOf('NokiaN') > -1
+//windows mobile
+if (system.win == 'CE') {
+  system.winMobile = system.win
+} else if (system.win == 'Ph') {
+  if (/Windows Phone OS (\d+.\d+)/.test(ua)) {
+    system.win = 'Phone'
+    system.winMobile = parseFloat(RegExp['$1'])
+  }
+}
+
+//检测 iOS 版本
+if (system.mac && ua.indexOf('Mobile') > -1) {
+  if (/CPU (?:iPhone )?OS (\d+_\d+)/.test(ua)) {
+    system.ios = parseFloat(RegExp.$1.replace('_', '.'))
+  } else {
+    system.ios = 2 //不能真正检测出来，所以只能猜测
+  }
+}
+//检测 Android 版本
+if (/Android (\d+\.\d+)/.test(ua)) {
+  system.android = parseFloat(RegExp.$1)
+}
+//游戏系统
+system.wii = ua.indexOf('Wii') > -1
+system.ps = /playstation/i.test(ua)
+//返回这些对象
+return {
+  engine: engine,
+  browser: browser,
+  system: system,
+}
+})()
+```
+
+我只能说裂开，不用深究
+
+## 第十章DOM
