--- a/JS/设计模式.md
+++ b/JS/设计模式.md
@@ -639,4 +639,610 @@ console.log(isFit(5, func1, func2, func3))
 
 - 发布—订阅模式又叫观察者模式，它定义对象间的一种一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都将得到通知
 - 此模式就好比，一个主播，有很多关注的人，当主播发送开播通知的时候，每个关注的人都会收到通知
-- 
+- DOM事件就是一个发布-订阅模式，我们手动添加的事件就是订阅，而当触发事件的时候就是发布。这样我们只需要注册事件，等到触发的时候执行回调即可
+- 实现观察者模式：1 选好发布者， 2 给发布者添加一个缓存队列，用于存放订阅者的回调，3 发布者发布消息，遍历缓存队列执行每一个订阅者的回调函数，即通知订阅者
+
+观察者模式之事件监听触发
+
+```事件模式
+// 定义发布者
+const release = {}
+// 订阅者队列
+release.subscribeCache = []
+// 注册监听
+release.listen = function (eventName, callback) {
+  // 添加对应事件的回调
+  if (!this.subscribeCache[eventName]) {
+    this.subscribeCache[eventName] = []
+  }
+  this.subscribeCache[eventName].push(callback)
+}
+release.trigger = function () {
+  const key = Array.prototype.shift.call(arguments)
+  // 取出对应事件的回调
+  const fns = this.subscribeCache[key]
+  if (!fns || !fns.length) return false
+  for (const fn of fns) {
+    // 通知
+    fn.apply(this, arguments)
+  }
+}
+release.listen('click', (e) => {
+  console.log(e)
+})
+release.listen('move', (e) => {
+  console.log(e)
+})
+release.trigger('click', '触发点击') // 触发点击
+release.trigger('move', '触发移动') //触发移动
+-------------------------------------------------
+// 给对象添加事件工厂函数
+const addEvent = function (obj) {
+  for (const key in event) {
+    // 添加事件属性，使其具有事件能力
+    obj[key] = event[key]
+  }
+}
+// 事件对象
+const event = {
+  subscribeCache: {},
+  listen(eventName, callback) {
+    // 添加对应事件的回调
+    if (!this.subscribeCache[eventName]) {
+      this.subscribeCache[eventName] = []
+    }
+    this.subscribeCache[eventName].push(callback)
+  },
+  trigger() {
+    const key = Array.prototype.shift.call(arguments)
+    // 取出对应事件的回调
+    const fns = this.subscribeCache[key]
+    if (!fns || !fns.length) return false
+    for (const fn of fns) {
+      fn.apply(this, arguments)
+    }
+  },
+  remove(eventName, fn) {
+    // 取对应事件的回调列表
+    const fns = this.subscribeCache[eventName]
+    // 回调列表为空直接返回
+    if (!fns) return false
+    // 没有回调说明取消此事件全部回调
+    if (!fn) {
+      fns.length = 0
+    } else {
+      if (fns.length === 1) {
+        // 如果只有一个回调直接移除事件
+        delete this.subscribeCache[eventName]
+      } else {
+        for (let i = 0; i < fns.length; i++) {
+          // 删除对应的回调
+          if (fn === fns[i]) {
+            fns.splice(i, 1)
+          }
+        }
+      }
+    }
+  }
+}
+const obj = {
+  name: 'tom'
+}
+addEvent(obj)
+obj.listen('click', (e) => {
+  console.log(e)
+})
+obj.listen('move', (e) => {
+  console.log(e)
+})
+obj.trigger('click', '触发点击') // 触发点击
+obj.remove('click')
+obj.trigger('click', '触发点击') // 不触发
+obj.trigger('move', '触发移动') // 触发移动
+obj.remove('move')
+obj.trigger('move', '触发移动') // 不触发
+-------------------------------------------------
+// 构建一个全局事件对象，用来添加事件
+const event = (function () {
+  const subscribeCache = {}
+  const listen = function (eventName, callback) {
+    // 添加对应事件的回调
+    if (!subscribeCache[eventName]) {
+      subscribeCache[eventName] = []
+    }
+    subscribeCache[eventName].push(callback)
+  }
+  const trigger = function () {
+    const key = Array.prototype.shift.call(arguments)
+    // 取出对应事件的回调
+    const fns = subscribeCache[key]
+    if (!fns || !fns.length) return false
+    for (const fn of fns) {
+      fn.apply(this, arguments)
+    }
+  }
+  const remove = function (eventName, fn) {
+    // 取对应事件的回调列表
+    const fns = subscribeCache[eventName]
+    // 回调列表为空直接返回
+    if (!fns) return false
+    // 没有回调说明取消此事件全部回调
+    if (!fn) {
+      fns.length = 0
+    } else {
+      if (fns.length === 1) {
+        // 如果只有一个回调直接移除事件
+        delete subscribeCache[eventName]
+      } else {
+        for (let i = 0; i < fns.length; i++) {
+          // 删除对应的回调
+          if (fn === fns[i]) {
+            fns.splice(i, 1)
+          }
+        }
+      }
+    }
+  }
+  // 对外暴露接口
+  return {
+    listen,
+    remove,
+    trigger
+  }
+})()
+event.listen('click', (e) => {
+  console.log(e)
+})
+event.listen('move', (e) => {
+  console.log(e)
+})
+event.trigger('click', '触发点击') // 触发点击
+event.remove('click')
+event.trigger('click', '触发点击') // 不触发
+event.trigger('move', '触发移动') // 触发移动
+event.remove('move')
+event.trigger('move', '触发移动') // 不触发
+```
+
+基于先发布后订阅以及使用命名空间来解决冲突和先发布后订阅
+
+个人理解
+
+- 发布订阅者模式，发布者通过订阅队列，当需要发布的时候通知订阅者，即调用订阅者之前注册的回调函数
+- 先发布后订阅，也是类似代理模式的帮忙先缓存请求，等订阅来了一次性发布，这样就能解决异步问题
+
+## 命令模式
+
+- 命令模式中的命令（command）指的是一个执行某些特定事情的指令
+- 命令模式最常见的应用场景是：有时候需要向某些对象发送请求，但是并不知道请求的接收者是谁，也不知道被请求的操作是什么。此时希望用一种松耦合的方式来设计程序，使得请求发送者和请求接收者能够消除彼此之间的耦合关系
+
+```命令模式
+// 设置命令
+const setCommand = function (ele, command) {
+  // 给对应的元素添加点击事件
+  ele.onclick = function () {
+    // 事件内触发命令
+    command.refresh()
+  }
+}
+// 菜单对象
+const menu = {
+  refresh() {
+    console.log('刷新菜单')
+  }
+}
+// 封装命令
+const RefreshCommand = function (menu) {
+  // 返回命令对象，其中包含各种命令
+  return {
+    refresh() {
+      // 执行刷新方法
+      menu.refresh()
+    }
+  }
+}
+// 给button添加命令
+const btn = document.querySelector('button')
+// 关联命令
+const btnCommand = RefreshCommand(menu)
+// 标签关联命令
+setCommand(btn, btnCommand)
+// 点击按钮触发命令
+```
+
+通过命令执行动作
+
+```动作命令
+// 定义动作
+const action = {
+  attack() {
+    console.log('攻击')
+  },
+  defense() {
+    console.log('防御')
+  },
+  jump() {
+    console.log('上跳')
+  },
+  crouch() {
+    console.log('蹲下')
+  }
+}
+// 按键对应的动作
+const command = {
+  115: 'jump',
+  119: 'crouch',
+  97: 'defense',
+  100: 'attack'
+}
+// 创建命令
+const makeCommand = function (action, method) {
+  return function () {
+    // 绑定动作
+    action[method]()
+  }
+}
+// 命令队列
+const commandStack = []
+document.onkeypress = function (e) {
+  // 获取按键码
+  const code = e.keyCode
+  // 绑定动作
+  const act = makeCommand(action, command[code])
+  // 加入队列
+  commandStack.push(act)
+}
+const btn = document.querySelector('button')
+btn.addEventListener('click', () => {
+  commandStack.forEach(act => act()) // w s a d=>执行上跳、下蹲、防御、攻击
+  commandStack.length = 0
+})
+```
+
+个人理解
+
+- 通过命令队列这样可以营造出硬直等效果，命令模式可以通过宏命令来执行一批任务
+- 通过命令执行需要的操作
+- 在js中命令模式是一种隐形的模式，很多地方都使用到了命令模式，比如高阶函数
+
+## 组合模式
+
+- 事物是由相似的子事物构成
+- 组合模式就是用小的子对象来构建更大的对象，而这些小的子对象本身也许是由更小的“孙对象”构成的
+- 就类似套娃
+- 组合模式将对象组合成树形结构，以表示“部分整体”的层次结构
+- 组合模式最大的优点在于可以一致地对待组合对象和基本对象
+- 比如扫描文件夹就类似一个组合模式，文件夹是一棵树型结构，文件是子节点，文件夹是非子节点，且文件只能添加在非子节点上，在文件夹上搜索文件，就会遍历整个文件夹包括子文件夹下的文件，直到找到文件
+- 基本对象可以被组合成更复杂的组合对象，组合对象又可以被组合，这样不断递归下去，这棵树的结构可以支持任意多的复杂度，只需要调用最上层对象
+
+扫描文件夹
+
+```扫描文件夹
+// 组合模式
+// 实现文件夹类
+const folder = function (name) {
+  this.name = name
+  this.files = []
+}
+folder.prototype.add = function (file) {
+  // 给文件夹添加文件
+  this.files.push(file)
+}
+folder.prototype.scan = function () {
+  console.log(`扫描文件夹${this.name}`)
+  this.files.forEach((file) => {
+    file.scan()
+  })
+}
+const file = function (name) {
+  this.name = name
+}
+file.prototype.add = function () {
+  throw new Error('不是文件夹')
+}
+file.prototype.scan = function () {
+  console.log('扫描' + this.name + '文件');
+}
+const folder1 = new folder('文件夹1')
+const folder2 = new folder('文件夹2')
+const file1 = new file('文件1')
+const file2 = new file('文件2')
+folder1.add(file1)
+folder1.add(folder2)
+folder2.add(file2)
+folder1.scan()
+```
+
+- 只需要扫描最顶层对象即可
+- 组合对象把请求委托给它所包含的所有叶对象，它们能够合作的关键是拥有相同的接口
+- 组合模式不是父子关系，每个下级对象都与上级对象接口相同，上级把任务委派给下级所有对象，对待下级对象的方式要一致
+
+移除文件夹/文件
+
+```文件移除操作
+// 组合模式
+// 实现文件夹类
+const folder = function (name) {
+  this.name = name
+  this.files = []
+  this.parent = null
+}
+folder.prototype.add = function (file) {
+  // 给文件夹添加文件
+  this.files.push(file)
+  // 设置文件的上级
+  file.parent = this
+}
+folder.prototype.remove = function () {
+  // 顶级节点
+  if (!this.parent) return
+  // 父节点列表
+  const files = this.parent.files
+  for (let i = 0; i < files.length; i++) {
+    // 移除
+    if (files[i] === this) {
+      files.splice(i, 1)
+    }
+  }
+}
+folder.prototype.scan = function () {
+  console.log(`扫描文件夹${this.name}`)
+  this.files.forEach((file) => {
+    file.scan()
+  })
+}
+const file = function (name) {
+  this.parent = null
+  this.name = name
+}
+file.prototype.add = function () {
+  throw new Error('不是文件夹')
+}
+file.prototype.remove = function () {
+  // 顶级文件
+  if (!this.parent) return
+  // 父节点列表
+  const files = this.parent.files
+  for (let i = 0; i < files.length; i++) {
+    // 移除
+    if (files[i] === this) {
+      files.splice(i, 1)
+    }
+  }
+}
+file.prototype.scan = function () {
+  console.log('扫描' + this.name + '文件');
+}
+const folder1 = new folder('文件夹1')
+const folder2 = new folder('文件夹2')
+const file1 = new file('文件1')
+const file2 = new file('文件2')
+const file3 = new file('文件3')
+folder1.add(file1)
+folder1.add(folder2)
+folder2.add(file3)
+folder2.add(file2)
+folder2.remove()
+file1.remove()
+folder1.scan()
+```
+
+个人理解
+
+- 组合模式可以用在对象是即使部分又表示整体，且顶级对象与子对象的接口相同，只需要操作顶级对象就可以统一对子对象操作
+- 操作对象是不关系是叶子对象还是节点对象，只关系操作方式，只通过操作节点对象就能实现对叶子对象的操作，增加与删除也很方便
+- 忽略组合对象与叶子对象的操作，因为他们是一致的
+
+## 模板方法模式
+
+- 模板方法模式是一种只需使用继承就可以实现的非常简单的模式
+- 模板方法模式由两部分结构组成，第一部分是抽象父类，第二部分是具体的实现子类
+- 父类实现一些公共方法以及封装子类中所有方法的执行顺
+序。子类通过继承这个抽象类，也继承了整个算法结构，并且可以选择重写父类的方法
+- 子类实现中的相同部分被上移到父类中，而将不同的部分留待子类来实现
+
+模板方法模式
+
+```模板方法模式
+// 模板方法模式
+// 定义一个抽象类
+const Beverage = function () {}
+// 公共方法
+Beverage.prototype.boilWater = function () {
+  console.log('煮水')
+}
+// 这些空方法由子类来实现
+// 泡
+Beverage.prototype.brew = function () {}
+// 倒入杯子
+Beverage.prototype.pourInCup = function () {}
+// 加调料
+Beverage.prototype.addCondiments = function () {}
+// 初始化，规定顺序
+// 该方法中封装了子类的算法框架，它作为一个算法的模板，指导子类以何种顺序去执行哪些方法
+Beverage.prototype.init = function () {
+  this.boilWater()
+  this.brew()
+  this.pourInCup()
+  this.addCondiments()
+}
+const Coffee = function () {}
+Coffee.prototype = new Beverage()
+Coffee.prototype.brew = function () {
+  console.log('泡')
+}
+Coffee.prototype.pourInCup = function () {
+  console.log('倒入杯中')
+}
+Coffee.prototype.addCondiments = function () {
+  console.log('添加调料')
+}
+const coffee = new Coffee()
+coffee.init() // 煮水、泡、倒入杯中、添加调料
+```
+
+- 通过抽象类定义接口，公共方法可以直接实现即具体方法，非公共方法子类来实现，子类都要实现抽象类定义的方法
+- 具体类可以实例化，抽象类不能，只能继承
+- 通过鸭子类型来检测是否实现抽象类定义的方法，或者通过抽象类抛出异常来提示子类实现方法
+
+增加钩子和判断是否实现子类方法
+
+```模板方法模式
+// 模板方法模式
+// 定义一个抽象类
+const Beverage = function () {}
+// 公共方法
+Beverage.prototype.boilWater = function () {
+  console.log('煮水')
+}
+// 这些空方法由子类来实现
+// 泡
+Beverage.prototype.brew = function () {
+  throw new Error('子类未实现此方法')
+}
+// 倒入杯子
+Beverage.prototype.pourInCup = function () {
+  throw new Error('子类未实现此方法')
+}
+// 加调料
+Beverage.prototype.addCondiments = function () {
+  throw new Error('子类未实现此方法')
+}
+// 添加钩子
+Beverage.prototype.hook = function () {
+  return true
+}
+// 初始化，规定顺序
+// 该方法中封装了子类的算法框架，它作为一个算法的模板，指导子类以何种顺序去执行哪些方法
+Beverage.prototype.init = function () {
+  this.boilWater()
+  this.brew()
+  this.pourInCup()
+  // 默认需要
+  if (this.hook()) {
+    this.addCondiments()
+  }
+}
+const Coffee = function () {}
+Coffee.prototype = new Beverage()
+Coffee.prototype.brew = function () {
+  console.log('泡')
+}
+Coffee.prototype.pourInCup = function () {
+  console.log('倒入杯中')
+}
+Coffee.prototype.addCondiments = function () {
+  console.log('添加调料')
+}
+Coffee.prototype.hook = function () {
+  // 由用户决定
+  return window.confirm( '请问需要调料吗？' );
+}
+const coffee = new Coffee()
+coffee.init() // 煮水、泡、倒入杯中、添加调料
+```
+
+- 子类无需控制自己的方法执行，执行细节由父类来决定，即调用的是父类的init，子类只实现自己的方法即可，执行顺序等由父类来决定，这就是好莱坞原则
+- 模板方法是基于继承实现的模式，其实也是基于js的对象委托来实现继承
+- 模板方法模式是一种典型的通过封装变化提高系统扩展性的设计模式
+
+个人理解
+
+- 模板方法，通过抽象类定义一系列方法，如果方法的实现不涉及子类，那么可以在抽象类直接实现，如果需要子类自己来实现那么，就要子类自己实现
+- 子类需要实现每个父类未实现的方法，子类具体的调用由父类来实现
+- 通过增加子类来增加父类的功能，但是父类的对子类的方法执行没有改变
+
+## 享元模式
+
+- 享元flyweight模式是一种用于性能优化的模式
+- 享元模式的核心是运用共享技术来有效支持大量细粒度的对象
+- 享元模式的目标是尽量减少共享对象的数量，通过时间来换取空间
+
+享元模式之模特拍照
+
+```享元模式
+// 享元模式
+// 定义模特性别
+const Model = function (sex) {
+  this.sex = sex
+}
+// 照相
+Model.prototype.takePhoto = function () {
+  console.log('sex:' + this.sex + ' underwear=' + this.underwear)
+}
+const male = new Model('male'),
+  female = new Model('female')
+// 只需要2个模特，实现全部衣服的拍照
+for (let i = 1; i <= 50; i++) {
+  male.underwear = i
+  female.underwear = i
+  male.takePhoto()
+  female.takePhoto()
+}
+```
+
+- 享元模式要求将对象的属性划分为内部状态与外部状态（状态在这里通常指属性），
+- 享元模式的目标是尽量减少共享对象的数量
+
+ 内部状态存储于对象内部。
+ 内部状态可以被一些对象共享。 
+ 内部状态独立于具体的场景，通常不会改变。
+ 外部状态取决于具体的场景，并根据场景而变化，外部状态不能被共享。
+我们便可以把所有内部状态相同的对象都指定为同一个共享的对象。而外部状态可以从对象身上剥离出来，并储存在外部
+
+- 外部状态不由对象共享，由环境决定，内部状态相同的对象属于共享对象
+- 在一个存在大量相似对象的系统中，享元模式可以很好地解决大量对象带来的性能问题
+
+对象池，把每次不用的对象压入对象池，等要用的时候直接拿出来，不需要再创建
+
+```对象池
+// 创建对象池工厂函数
+const objectPoolFactory = function (createObjFn) {
+  // 保存的对象池
+  const objPool = []
+  return {
+    create() {
+      if (objPool.length) {
+        console.log('对象池取对象' + (objPool.length))
+      } else {
+        console.log('创建对象')
+      }
+      // 如果对象池有对象就直接拿来使用，如果没有那么就创建一个对象
+      return !objPool.length ? createObjFn.apply(this, arguments) : objPool.shift()
+    },
+    // 回收
+    recover(obj) {
+      objPool.push(obj)
+      console.log('回收' + objPool.length)
+    }
+  }
+}
+const imgAct = objectPoolFactory(() => { // 构造对象方法
+  const img = document.createElement('img')
+  // 加载完回收
+  img.onload = function () {
+    img.onload = null
+    // 回收
+    imgAct.recover(img)
+  }
+  document.body.appendChild(img)
+  return img
+})
+const img1 = imgAct.create()
+img1.src = '1.png'
+const img2 = imgAct.create()
+img2.src = '2.png'
+setTimeout(() => {
+  const img3 = imgAct.create()
+  img3.src = '3.png'
+  const img4 = imgAct.create()
+  img4.src = '4.png'
+}, 1000)
+```
+
+如果在一个页面中需要创建1000个div，我们可以只创建10个div，当下拉的时候销毁被覆盖的div，然后加入到对象池，而新的div直接从对象池取出不需要重新创建
+
+个人理解
+
+- 在需要生成大量类似的对象时，会造成内存开销，且对象的内部属性相似度较高，外部状态可变，这样可以剥离对象的外部状态，只需要要用的时候创建对象，对象的内部状态是类似的，那么就可以借用之前的对象
+- 比如需要创建几万个div时，我们不能看真的创建那么多，可能就创建当前屏幕能显示的div或者多几个可以保证快速滑动的时候不至于白屏。那么其实只需要10来个div，每次显示的时候只需要改变内容即可，不需要重新创建div标签，这样可以提速不少性能，且与div数量无关
