--- a/设计模式/设计模式.md
+++ b/设计模式/设计模式.md
@@ -1246,3 +1246,8 @@ setTimeout(() => {
 
 - 在需要生成大量类似的对象时，会造成内存开销，且对象的内部属性相似度较高，外部状态可变，这样可以剥离对象的外部状态，只需要要用的时候创建对象，对象的内部状态是类似的，那么就可以借用之前的对象
 - 比如需要创建几万个div时，我们不能看真的创建那么多，可能就创建当前屏幕能显示的div或者多几个可以保证快速滑动的时候不至于白屏。那么其实只需要10来个div，每次显示的时候只需要改变内容即可，不需要重新创建div标签，这样可以提速不少性能，且与div数量无关
+
+## 职责链模式
+
+- 使多个对象都有机会处理请求，从而避免请求的发送者和接收者之间的耦合关系，将这些对象连成一条链，并沿着这条链传递该请求，直到有一个对象处理它为止
+- 比如在公交车上，有很多人，如果一个从后门上车的人，只能把硬币传给前面的人帮忙传硬币，直到售票机为止，那么这个传递过程就是一个职责链，当这个链中有一个可以处理这个请求的的节点，那么就会被解决
