--- a/JS/设计模式.md
+++ b/JS/设计模式.md
@@ -1787,19 +1787,19 @@ renderMap(shouGouMapAdaptation) // 正常执行
 
 ## 总结
 
-| 设计模式      | 描述 |
-| ------------- | ---- |
-| 单例模式      |      |
-| 策略模式      |      |
-| 代理模式      |      |
-| 迭代器模式    |      |
-| 发布-订阅模式 |      |
-| 命令模式      |      |
-| 组合模式      |      |
-| 模板方法模式  |      |
-| 享元模式      |      |
-| 职责链模式    |      |
-| 中介者模式    |      |
-| 装饰者模式    |      |
-| 状态模式      |      |
-| 适配器模式    |      |
+| 设计模式      | 描述                                                                                                                                                 |
+| ------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 单例模式      | 一个类仅一个实例，并提供一个访问它的全局访问点，通过判断是否已有实例                                                                                 |
+| 策略模式      | 定义一系列方法，并且实现这些方法。实现与应用分离，通过应用来指定使用哪个实现                                                                         |
+| 代理模式      | 一开始就定义了代理对象，与本体对象接口一致，通过代理对象，帮助本体处理一些请求，如果满足条件再给本体                                                 |
+| 迭代器模式    | 通过迭代器，使外部能够访问对象内部元素，但是无法知道具体细节，通过迭代器来暴露内部的元素                                                             |
+| 发布-订阅模式 | 发布者定义订阅队列，把所有订阅者的回调加入队列，等到发布者发布通知的时候，会遍历所有的订阅回调队列一个个执行回调                                     |
+| 命令模式      | 通过封装命令，可以不需要知道命令的执行细节，命令指的是执行某些特定事情的指令                                                                         |
+| 组合模式      | 子叶对象与非子页对象的接口一致，通过嵌套关系，把请求发配给节点对象，那么它就会找到其对应的子叶对象执行方法，只有子叶可以执行方法                     |
+| 模板方法模式  | 模板方法就类似抽象类，抽象类不能实例化，只能继承，子类必须实现抽象类定义的接口，抽象类可以实现子类相同的实现，但是执行顺序以及调用方式在抽象类中实现 |
+| 享元模式      | 典型例子缓存对象池，可以把内部相同的属性当作共享对象，可以重复使用，不需要再创建，从而减少对象的创建，使用共享对象来节省开销                         |
+| 职责链模式    | 请求从一个链节点进入，从一个个节点中判断是否为处理目标，如果是就处理，如果不是就往后传，直到最后处理到，或者结束                                     |
+| 中介者模式    | 对象与对象之间没有关联，通过中介对象来实现多个对象之间的通信，从而实现对象与对象之间没有耦合度，但是会导致中介对象臃肿，中介者遵循最少知识原则       |
+| 装饰者模式    | 通过包装对象或者函数，给原来函数增加功能，能够针对不同的需求增加函数或者对象的功能，更加灵活的使用装饰后的函数或者对象，即用即付                     |
+| 状态模式      | 给对象增加一个状态机，状态机包含各种状态，每个状态实现不同的行为，通过切换不同的状态执行对应的方法，使得对象的行为由状态决定                         |
+| 适配器模式    | 包装不兼容的接口返回兼容的接口，这样就能通过兼容接口内部使用不兼容的接口实现外部兼容                                                                 |
