--- a/设计模式/设计模式.md
+++ b/设计模式/设计模式.md
@@ -1251,3 +1251,555 @@ setTimeout(() => {
 
 - 使多个对象都有机会处理请求，从而避免请求的发送者和接收者之间的耦合关系，将这些对象连成一条链，并沿着这条链传递该请求，直到有一个对象处理它为止
 - 比如在公交车上，有很多人，如果一个从后门上车的人，只能把硬币传给前面的人帮忙传硬币，直到售票机为止，那么这个传递过程就是一个职责链，当这个链中有一个可以处理这个请求的的节点，那么就会被解决
+
+职责链模式
+
+```职责链模式
+// 职责链模式
+const order500 = function (orderType, pay, stock) {
+  // 匹配类型
+  if (orderType === 1 && pay === true) {
+    console.log('500元定金，获得200元优惠券')
+  } else {
+    // 不匹配，交给下一个
+    return 'next'
+  }
+}
+const order200 = function (orderType, pay, stock) {
+  if (orderType === 2 && pay === true) {
+    console.log('200元定金，获得50元优惠券')
+  } else {
+    return 'next'
+  }
+}
+const orderNormal = function (orderType, pay, stock) {
+  if (stock > 0) {
+    console.log('普通购买无优惠券')
+  } else {
+    console.log('库存不足')
+  }
+}
+const Chain = function (fn) {
+  // 创建定金实例
+  this.fn = fn
+  // 下一个交付
+  this.successor = null
+}
+Chain.prototype.setSuccessor = function (order) {
+  // 设置下一个
+  return this.successor = order
+}
+Chain.prototype.request = function () {
+  // 判断是否满足
+  const res = this.fn.apply(this, arguments)
+  // 不满足
+  if (res === 'next') {
+    return this.successor && this.successor.request.apply(this.successor, arguments)
+  }
+  // 满足
+  return res
+}
+const od500 = new Chain(order500)
+const od200 = new Chain(order200)
+const odNormal = new Chain(orderNormal)
+od500.setSuccessor(od200)
+od200.setSuccessor(odNormal)
+od500.request(2, true, 5)
+od500.request(1, true, 2)
+od500.request(1, false, 0)
+```
+
+个人理解
+
+- 职责链模式，好比垃圾分类，垃圾到了传送带上，过好几个识别类型的机器，当垃圾对应机器识别的类型那么，垃圾就会被处理。
+- 虽然可以很好的解耦，但是个人感觉效率还是低了，毕竟不是针对性处理，职责链类似一个过滤器，一个个筛选直到对的，这样浪费了不必要的传递过程，不过对于我们来说，只需要把请求抛给职责链就行了
+
+## 中介者模式
+
+- 面向对象设计鼓励将行为分布到各个对象中，把对象划分成更小的粒度，有助于增强对象的可复用性，但由于这些细粒度对象之间的联系激增，又有可能会反过来降低它们的可复用性
+- 中介者模式的作用就是解除对象与对象之间的紧耦合关系
+- 通过中介者对象来通信，就好比中控中心，在现实中类似翻译官的职位，中介模式也就是字面上的意思一样
+
+中介模式之玩家分队玩法
+
+```中介模式
+// 中介模式
+// 玩家
+const player = function (name, color) {
+  this.name = name
+  this.state = 'live'
+  this.teamColor = color
+}
+// 赢
+player.prototype.win = function () {
+  console.log(this.name + 'win')
+}
+// 输
+player.prototype.lose = function () {
+  console.log(this.name + 'lose')
+}
+// 死亡
+player.prototype.die = function () {
+  console.log(this.name + '死了！')
+  this.state = 'die'
+  // 通知中介者
+  playerDirector.sendMessage('playerDead', this)
+}
+// 移除玩家
+player.prototype.remove = function () {
+  // 通知中介者
+  playerDirector.sendMessage('removePlayer', this)
+}
+// 玩家换队
+player.prototype.changeTeam = function (color) {
+  // 通知中介者
+  playerDirector.sendMessage('changeTeam', this, color)
+}
+// 玩家工厂函数
+const PlayerFactory = function (name, color) {
+  // 创建一个玩家
+  const newPlayer = new player(name, color)
+  // 通知中介者
+  playerDirector.sendMessage('newPlayer', newPlayer)
+  return newPlayer
+}
+// 中介对象
+const playerDirector = (function () {
+  // 玩家列表
+  const players = {}
+  // 中介操作
+  const operations = {}
+  // 中介者创建角色
+  operations.newPlayer = function (player) {
+    // 队伍
+    const team = player.teamColor
+    // 创建/取队伍
+    players[team] = players[team] || []
+    // 加入队伍
+    players[team].push(player)
+  }
+  // 移除玩家
+  operations.removePlayer = function (player) {
+    const team = player.teamColor
+    // 创建/取队伍
+    players[team] = players[team] || []
+    for (let i = 0; i < players[team].length; i++) {
+      if (player === players[team][i]) {
+        // 从队伍中移除
+        players[team].splice(i, 1)
+      }
+    }
+  }
+  // 玩家换队
+  operations.changeTeam = function (player, color) {
+    // 移除原队伍
+    operations.removePlayer(player)
+    // 改变队伍
+    player.teamColor = color
+    // 加入队伍
+    operations.newPlayer(player)
+  }
+  operations.playerDead = function (player) {
+    // 取死亡玩家队伍颜色
+    const team = player.teamColor
+    // 取玩家所在队伍剩余玩家
+    players[team] = players[team] || []
+    let isLose = true
+    for (let i = 0; i < players[team].length; i++) {
+      if (players[team][i].state !== 'die') {
+        // 未灭队
+        isLose = false
+        break
+      }
+    }
+    // 灭队
+    if (isLose) {
+      for (let i = 0; i < players[team].length; i++) {
+        players[team][i].lose()
+      }
+      for (const teams of Object.values(players)) {
+        // 其他队伍赢
+        if (teams !== players[team]) {
+          teams.forEach((player) => player.win())
+        }
+      }
+    }
+  }
+  // 接受通知，执行对应方法
+  sendMessage = function () {
+    // 取命令
+    const args = Array.from(arguments)
+    const command = args.shift()
+    // 执行
+    operations[command](...args)
+  }
+  // 暴露一个接口
+  return {
+    sendMessage
+  }
+})()
+const player1 = new PlayerFactory('1号', 'red')
+const player2 = new PlayerFactory('2号', 'red')
+const player3 = new PlayerFactory('3号', 'red')
+const player4 = new PlayerFactory('4号', 'blue')
+const player5 = new PlayerFactory('5号', 'blue')
+const player6 = new PlayerFactory('6号', 'blue')
+player1.die()
+player2.die()
+player3.changeTeam('blue')
+player3.die()
+```
+
+- 中介者模式是迎合迪米特法则的一种实现。迪米特法则也叫最少知识原则，是指一个对象应该尽可能少地了解另外的对象
+- 也就是让对象间的关系尽量松弛，耦合度尽量小
+
+个人理解
+
+- 中介者模式，基于最少知识原则，保证对象与对象之间通过中介对象来传达消息，这样一来2个对象之间几乎没有耦合
+- 通过中介者对象，可以保证一个对象改变后不会影响另一个对象，也就是解耦了，只通过通知中介对象来实现其他对象间的交互，当然这样一来中介对象可能会很庞大
+
+## 装饰者模式
+
+- 装饰者模式可以动态地给某个对象添加一些额外的职责，而不会影响从这个类中派生的其他对象
+- 传统的给对象添加功能经常通过继承来实现，这样会导致父子对象耦合过高
+- 给对象动态增加职责的方式称为装饰者模式，可以在不改动原对象的前提下增加职责，是一种即用即付方式
+
+装饰者模式之飞机开火
+
+```装饰者模式
+// 装饰者模式
+// 飞机
+const Plane = function () {}
+// 普通飞机开火
+Plane.prototype.fire = function () {
+  console.log('开火')
+}
+const MissileDecorator = function (plane) {
+  // 装饰普通飞机
+  this.plane = plane
+}
+MissileDecorator.prototype.fire = function () {
+  // 普通子弹
+  this.plane.fire()
+  // 导弹
+  console.log('导弹')
+}
+const AtomDecorator = function (plane) {
+  // 装饰普通飞机
+  this.plane = plane
+}
+AtomDecorator.prototype.fire = function () {
+  // 普通子弹
+  this.plane.fire()
+  // 原子弹
+  console.log('原子弹')
+}
+// 创建一个普通飞机
+let plane = new Plane()
+// 增加功能
+plane = new MissileDecorator(plane)
+plane = new AtomDecorator(plane)
+plane.fire() // 开火、导弹、原子弹
+```
+
+- 装饰者也是包装器，通过嵌套对象，来实现增加额外功能，但是使用最外层功能的时候会依次传递对象链的所有对象，调用使用的功能，也就是每增加一层(包装)，就添加一些功能
+- 装饰函数，在函数原有基础上增加功能，不改变原函数
+
+通过保存函数的引用，覆盖原函数来达到给函数增加功能，如果保存的是有多级查询的引用会报错误，或者通过apply/call绑定this指向
+
+装饰函数
+
+```装饰函数
+let a = function () {
+  console.log(1)
+}
+const _a = a
+a = function () {
+  _a()
+  console.log(2)
+}
+a()
+```
+
+基于AOP封装函数
+
+```基于AOP封装函数
+// 装饰调用前
+Function.prototype.before = function (beforeFn) {
+  // 这是原函数的引用,必须保存，只有第一次调用的时候是原函数
+  const that = this
+  return function () {
+    // 原函数执行前
+    beforeFn.apply(this, arguments)
+    // 返回原函数执行结果，this由调用决定
+    return that.apply(this, arguments)
+  }
+}
+// 装饰调用后
+Function.prototype.after = function (afterFn) {
+  // 这是原函数的引用,必须保存，只有第一次调用的时候是原函数
+  const that = this
+  return function () {
+    // 返回原函数执行结果，this由调用决定
+    const res = that.apply(this, arguments)
+    // 原韩执行后
+    afterFn.apply(this, arguments)
+    // 返回原函数结果
+    return res
+  }
+}
+const foo = function () {
+  console.log('原函数')
+}
+const beforeFn = foo.before(() => {
+  console.log('在函数foo执行前装饰的函数')
+})
+let afterFn = foo.after(() => {
+  console.log('在函数foo执行后装饰的函数')
+})
+foo()
+beforeFn()
+afterFn()
+```
+
+- 还可在before中给原函数的参数添加属性等
+- 也可以通过before提前校验表单，如果不通过就直接返回false不会进入原函数，这样可以省去原函数的处理，把验证和发送请求从原函数分离出来，before负责验证，原函数负责发送数据
+- 装饰后的函数是新的函数，如果要覆盖原函数名，那么原来给函数增加的属性将会被覆盖
+- 代理模式强调一种关系（Proxy 与它的实体之间的关系），这种关系可以静态的表达，也就是说，这种关系在一开始就可以被确定。而装饰者模式用于一开始不能确定对象的全部功能时
+- 代理模式通常只有一层代理本体的引用，而装饰者模式经常会形成一条长长的装饰链
+- 代理是一层关系，在一开始就确定行为，装饰是一条装饰链，在需要功能的时候装饰
+- TS就很好的运用到了装饰者模式，我们可以按需添加功能，且原函数没有改变
+
+个人理解
+
+- 装饰者模式，有点类似组合模式，但是装饰模式可以选择覆盖原函数或者是生成新函数，可以在原函数的基础上增加功能，如果不覆盖那么既可以使用原函数，也能使用装饰过的函数，灵活性更强了
+- 可以理解为，玩家添加装备，使自身的战斗力增强，也就意味着获得更多效果，不推荐覆盖原函数，使用新函数可以针对不同装饰级别来应用不同量级的装饰函数
+
+## 状态模式
+
+- 状态模式的关键是区分事物内部的状态，事物内部状态的改变往往会带来事物的行为改变
+- 对象的内部属性改变时，引起外部事件变化
+- 把对象的状态封装成一个类，每个类自己实现渲染，切换到这个状态就执行这个状态的方法
+
+通过状态机改变灯的状态
+
+```状态模式
+// 状态模式
+const Light = function () {
+  this.state = 'off'
+  // 控制灯的按钮
+  this.button = null
+}
+// 初始化一个灯
+Light.prototype.init = function () {
+  const btn = document.createElement('button')
+  const that = this
+  btn.innerHTML = that.state
+  // 添加事件
+  btn.addEventListener('click', () => {
+    // 改变状态
+    that.changeState()
+    btn.innerHTML = that.state
+  })
+  // 添加按钮
+  document.body.appendChild(btn)
+}
+Light.prototype.changeState = function () {
+  if (this.state === 'off') {
+    this.state = 'on'
+  } else {
+    this.state = 'off'
+  }
+}
+const light = new Light()
+light.init()
+```
+
+通过封装状态类来切换状态，在状态类中已经定义好了规则
+
+```状态模式
+// 封装 3个状态类
+// 关灯状态
+const offLight = function (light) {
+  this.light = light
+}
+offLight.prototype.init = function () {
+  // 给最初的灯,设置状态
+  console.log('关灯')
+  this.light.setState(this.light.weakLight) //切换成弱光
+}
+const weakLight = function (light) {
+  this.light = light
+}
+weakLight.prototype.init = function () {
+  console.log('弱灯')
+  // 给最初的灯,设置状态
+  this.light.setState(this.light.StrongLight) //切换成强
+}
+const StrongLight = function (light) {
+  this.light = light
+}
+StrongLight.prototype.init = function () {
+  console.log('强灯')
+  // 给最初的灯,设置状态
+  this.light.setState(this.light.offLight) // 关灯
+}
+// 普通灯
+const Light = function () {
+  // 拥有多种状态
+  // 实例化关灯状态
+  this.offLight = new offLight(this)
+  // 弱灯
+  this.weakLight = new weakLight(this)
+  // 强灯
+  this.StrongLight = new StrongLight(this)
+  this.button = null
+}
+Light.prototype.init = function () {
+  const btn = document.createElement('button')
+  const that = this
+  // 初始状态
+  that.currentState = this.offLight
+  btn.innerHTML = that.state
+  // 添加事件
+  btn.addEventListener('click', () => {
+    // 改变状态
+    that.currentState.init()
+  })
+  // 添加按钮
+  document.body.appendChild(btn)
+}
+Light.prototype.setState = function (state) {
+  this.currentState = state
+}
+const light = new Light()
+light.init()
+```
+
+- 状态模式：允许一个对象在其内部状态改变时改变它的行为，对象看起来似乎修改了它的类
+- 第一部分的意思是将状态封装成独立的类，并将请求委托给当前的状态对象，当对象的内部状态改变时，会带来不同的行为变化
+- 第二部分是从客户的角度来看，我们使用的对象，在不同的状态下具有截然不同的行为，这个对象看起来是从不同的类中实例化而来的，实际上这是使用了委托的效果
+- 如果对象的状态类没有实现，状态，那么应该继承一个抽象类，此类用于在没有实现状态的情况下将会报错警告
+- 原始对象只拥有对象类，对象类拥有对象状态与行为，当原始对象切换状态时，状态类就执行行为改变原始对象的状态以及当前状态所要做的事情
+- 策略模式和状态模式的相同点是，它们都有一个上下文、一些策略或者状态类，上下文把请求委托给这些类来执行
+- 策略模式和状态模式的区别是策略模式中的各个策略类之间是平等又平行的，它们之间没有任何联系，所以客户必须熟知这些策略类的作用，以便客户可以随时主动切换算法
+- 状态模式中，状态和状态对应的行为是早已被封装好的，状态之间的切换也早被规定完成，“改变行为”这件事情发生在状态模式内部
+
+状态机
+
+```状态机
+const Light = function () {
+  // 状态机
+  this.currentState = FSM.off
+  // 控制灯的按钮
+  this.button = null
+}
+// 初始化一个灯
+Light.prototype.init = function () {
+  const btn = document.createElement('button')
+  const that = this
+  this.button = btn
+  btn.innerHTML = '点我'
+  // 添加事件
+  btn.addEventListener('click', () => {
+    // 通过状态类改变状态
+    that.currentState.buttonWasPressed.call(that)
+  })
+  // 添加按钮
+  document.body.appendChild(btn)
+}
+// 状态机
+const FSM = {
+  // 状态
+  off: {
+    //状态执行的行为
+    buttonWasPressed: function () {
+      console.log('关灯');
+      this.button.innerHTML = '下一次按我是开灯';
+      this.currentState = FSM.on;
+    }
+  },
+  on: {
+    buttonWasPressed: function () {
+      console.log('开灯');
+      this.button.innerHTML = '下一次按我是关灯';
+      this.currentState = FSM.off;
+    }
+  }
+}
+const light = new Light()
+light.init()
+```
+
+个人理解
+
+- 给对象设置一个状态机，在状态机内设置多种状态，每个状态有自己的行为方式，当对象需要改变状态时直接调用状态对应的方法
+- 通过状态机控制对应状态执行的行为，这样可以更有序的对不同状态执行方法
+
+## 适配器模式
+
+- 适配器模式的作用是解决两个软件实体间的接口不兼容的问题
+- 适配器的别名是包装器
+- 把不兼容的接口包装成兼容的接口，就是套个兼容的外套，在内部实现不兼容的代码，只需要接口兼容
+
+适配器模式
+
+```适配器模式
+// 适配器模式
+const googleMap = {
+  show() {
+    console.log('googleMap')
+  }
+}
+const baiduMap = {
+  show() {
+    console.log('baiduMap')
+  }
+}
+// 不兼容接口
+const shouGouMap = {
+  display() {
+    console.log('shouGouMap')
+  }
+}
+// 适配接口
+const shouGouMapAdaptation = {
+  show() {
+    return shouGouMap.display()
+  }
+}
+const renderMap = function (map) {
+  if (map.show instanceof Function) {
+    map.show()
+  }
+}
+renderMap(googleMap)
+renderMap(baiduMap)
+renderMap(shouGouMapAdaptation) // 正常执行
+```
+
+- 如果接口不兼容，那么可以增加一个适配器，进行兼容实现，返回符合的接口
+
+个人理解
+
+- 通过包装不兼容的接口，把格式或者是调用方式，通过适配器转换成兼容的接口
+- 比如polyfill也是使用这个原理，通过适配器向上兼容
+
+## 总结
+
+| 设计模式      | 描述                                                                                                                                                 |
+| ------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 单例模式      | 一个类仅一个实例，并提供一个访问它的全局访问点，通过判断是否已有实例                                                                                 |
+| 策略模式      | 定义一系列方法，并且实现这些方法。实现与应用分离，通过应用来指定使用哪个实现                                                                         |
+| 代理模式      | 一开始就定义了代理对象，与本体对象接口一致，通过代理对象，帮助本体处理一些请求，如果满足条件再给本体                                                 |
+| 迭代器模式    | 通过迭代器，使外部能够访问对象内部元素，但是无法知道具体细节，通过迭代器来暴露内部的元素                                                             |
+| 发布-订阅模式 | 发布者定义订阅队列，把所有订阅者的回调加入队列，等到发布者发布通知的时候，会遍历所有的订阅回调队列一个个执行回调                                     |
+| 命令模式      | 通过封装命令，可以不需要知道命令的执行细节，命令指的是执行某些特定事情的指令                                                                         |
+| 组合模式      | 子叶对象与非子页对象的接口一致，通过嵌套关系，把请求发配给节点对象，那么它就会找到其对应的子叶对象执行方法，只有子叶可以执行方法                     |
+| 模板方法模式  | 模板方法就类似抽象类，抽象类不能实例化，只能继承，子类必须实现抽象类定义的接口，抽象类可以实现子类相同的实现，但是执行顺序以及调用方式在抽象类中实现 |
+| 享元模式      | 典型例子缓存对象池，可以把内部相同的属性当作共享对象，可以重复使用，不需要再创建，从而减少对象的创建，使用共享对象来节省开销                         |
+| 职责链模式    | 请求从一个链节点进入，从一个个节点中判断是否为处理目标，如果是就处理，如果不是就往后传，直到最后处理到，或者结束                                     |
+| 中介者模式    | 对象与对象之间没有关联，通过中介对象来实现多个对象之间的通信，从而实现对象与对象之间没有耦合度，但是会导致中介对象臃肿，中介者遵循最少知识原则       |
+| 装饰者模式    | 通过包装对象或者函数，给原来函数增加功能，能够针对不同的需求增加函数或者对象的功能，更加灵活的使用装饰后的函数或者对象，即用即付                     |
+| 状态模式      | 给对象增加一个状态机，状态机包含各种状态，每个状态实现不同的行为，通过切换不同的状态执行对应的方法，使得对象的行为由状态决定                         |
+| 适配器模式    | 包装不兼容的接口返回兼容的接口，这样就能通过兼容接口内部使用不兼容的接口实现外部兼容                                                                 |
