--- a/网络/计算机网络.md
+++ b/网络/计算机网络.md
@@ -635,7 +635,23 @@ https握手过程
 - 客户端收到响应后，使用CA机构提供的散列算法对证书计算获取信息摘要，然后使用公钥以及签名算法对签名解密，最终获得信息摘要
 - 比对散列算法计算出来的信息摘要与用公钥解密出来的信息摘要是否一致，如果一致则说明证书合法
 - 如果是权威机构颁发的证书那么服务器与客户端都内置了CA的证书以及公钥，如果此证书不是CA信任，那么则是非法证书
-- 最后确认是合法，则之后客户端生成一个pre_random随机数，再通过公钥加密，把加密后的密文发送给服务器
-- 服务器收到密文后，使用私钥解开密文获取pre_random，这样一来，客户端与服务器完成了认证识别，以及都含有client_random、server_random、pre_random这3个随机数，但是只有pre_random是客户端与服务器知道的，然后双方通过相同方式混合3个随机数，混合之后就是对称加密的密钥了，那么之后双方只需要通过这个密钥进行对称加密即可，效率也高
+- 最后确认是合法，则之后客户端生成一个pre_random随机数，再通过公钥加密。将client_random与server_random组合之后进行散列生成一个识别码，把加密后的密文与散列识别码发送给服务器
+- 服务器收到后，将client_random与server_random相同方式组合，再通过散列得到散列识别码，比对接收的识别码与自己计算的识别码是否一致，一致则表示证书认证的客户端为同一个来源，这样第一次交互已验证相同身份。接着使用私钥解密密文获得pre_random，这样一来，客户端与服务器完成了认证识别，以及都含有client_random、server_random、pre_random这3个随机数，但是只有pre_random是客户端与服务器知道的
+- 服务器对之前获得的3个随机数进行hash散列，生成二次交互的识别码。给客户端发送二次交互识别码
+- 客户端收到二次交互识别码，自身再通过之前获得的3个随机数也进行相同的hash散列，计算出来自己的二次交互识别码，对比计算结果与收到的识别码是否一致来判断，之前的交互是否为同一个来源，如果相同则说明是同一个来源
+- 然后双方通过相同方式再混合3个随机数，混合之后就是对称加密的密钥了，那么之后双方只需要通过这个密钥进行对称加密即可，效率也高
 
 证书=公钥+申请者与颁发者信息+签名，服务器只给CA机构公钥、申请信息、以及签名，私钥永远都只有服务器自己知道
+
+下面来详细介绍握手过程，以及证书颁发
+
+![申请证书](img/申请证书.png)
+
+1. 服务器给CA提供申请证书需要的材料：pk公钥+申请者信息，pk与sk是由服务器自己产生的非对称加密的密钥对，sk只有服务器自己知道
+2. CA也有自己的cpk与csk密钥对，cpk是公开的csk是私有的，在每个操作系统都有内置了CA机构的cpk公钥以及各种加密算法api，内置公钥是为了避免再次传输密钥导致泄漏
+3. CA通过csk对pk+申请者信息进行非对称加密，生成数字证书，再返回给服务器
+4. 服务器对自己的申请信息进行hash散列，生成信息摘要，再对信息摘要使用sk进行非对称加密，生成数字签名。最后发送给客户端的是：申请信息明文+数字签名+数字证书
+
+![HTTPS握手过程](img/HTTPS握手过程.png)
+
+大致过程如上，最终获得的对称密钥是服务器对应每个客户端共有的，对于每个不同的客户端其对称密钥也都不同
