动态规划&贪心算法

--- a/算法/10大排序算法.md
+++ b/算法/10大排序算法.md
@@ -720,3 +720,51 @@ function quickSortNos(arr, L = 0, R = arr.length - 1) {
   } while (stack.length)
 }
 ```
+
+## 递归算法
+
+- 一种计算过程，如果其中每一步都要用到前一步或前几步的结果，称为递归
+- 函数调用自身
+
+递归条件
+
+- 在每一次调用自己时，必须是（在某种意义上）更接近于解，递归关系式
+- 必须有一个终止处理或计算的准则（递归出口），就是可以直接看出结果，不需要进一步分析
+
+汉诺塔递归题
+
+![汉诺塔](img/汉诺塔.png)
+
+- 把a中的所有元素移动到c中
+- 一次只能移动一个元素，从塔的上方移除，且只能移动最上层元素
+- 大元素必须在小元素之下，b为辅助使用
+
+代码实现
+
+```汉诺塔
+// 定义初始塔元素,数组下标越小表示越处于塔的上方，10为塔底
+const A = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+// 定义辅助塔，空数组
+const B = []
+// 定义最终放置的塔，空数组
+const C = []
+// 递归函数，i为当前需要移动的块
+function move(a, b, c, i = a.length - 1) {
+  // a,b塔都没有元素，说明移动完成
+  if (!(a.length || b.length)) return c
+  // 只有一个
+  if (!i) { // 拐点
+    // 从a移动最底部块到c
+    c.unshift(a.shift())
+  } else { // 不止一块则继续递归，寻找出口
+    // 第i-1块，从a通过c移动到b
+    move(a, c, b, i - 1)
+    // 从a移动非最底部块
+    c.unshift(a.shift())
+    // 第i-1块，从b通过a移动到c
+    move(b, a, c, i - 1)
+  }
+}
+move(A, B, C) // 执行移动
+console.log(A, B, C) // [],[],[1,2,3,4,5,6,7,8,9,10]
+```
