--- a/数据结构/链表.md
+++ b/数据结构/链表.md
@@ -496,3 +496,118 @@ reverseByFor(node = this.searchNode(0, 0).cur) {
   }
 }
 ```
+
+### 链表判断环
+
+创建单向链表并生成环
+
+```单向链表
+// 创建单向链表
+const list = new LinkList()
+let node1 = new CreateNode('1')
+let node2 = new CreateNode('2')
+let node3 = new CreateNode('3')
+let node4 = new CreateNode('4')
+let node5 = new CreateNode('5')
+let node6 = new CreateNode('6')
+list.insertNode(node1)
+list.insertNode(node2)
+list.insertNode(node3)
+list.insertNode(node4)
+list.insertNode(node5)
+list.insertNode(node6)
+// 生成环，环入口node3
+node6.next = node3
+```
+
+#### 判断环
+
+一、通过Set保存遍历节点，判断每个节点是否保存过，如果保存过则说明是环
+
+```判断环
+// 判断环
+function isRing(link) {
+  // 获取链表头
+  let node = link.head
+  // 创建set存储节点
+  const set = new Set()
+  while (node) {
+    // 不存在，则保存
+    if (!set.has(node)) {
+      set.add(node)
+    } else {
+      // 存在则说明是环
+      return true
+    }
+    // 下一个节点
+    node = node.next
+  }
+  return false
+}
+console.log(isRing(list)) // true
+```
+
+二、通过设置快慢指针，当快指针与慢指针重合则说明，快指针绕了个环跑到后面了，快指针一次二格，慢指针一次一格
+
+```判断环
+// 判断环
+function isRing(link) {
+  // 获取头指针
+  let node = link.head
+  // 定义快慢指针
+  let fast = node,
+    slow = null
+  // 如果快指针与慢指针相同，则说明快指针从慢指针的前面跑到后面，则说明有环
+  while (fast !== slow) {
+    if (!slow) slow = node
+    // 如果为null则说明到链尾
+    if (!(fast.next && fast.next.next)) return false
+    // 快指针跳2个
+    fast = fast.next.next
+    // 慢指针跳1个
+    slow = slow.next
+  }
+  return true
+}
+console.log(isRing(list)) // true
+```
+
+#### 确认环入口
+
+- 通过快慢指针在环内相遇间隔，来进行判断
+
+![链表判断环入口](img/链表判断环入口.png)
+
+- 当第一次slow与fast相遇时已经都在环内，此时slow的移动距离(ds)=循环次数(n)x步长(1)，fast的移动距离(df)=循环次数(n)x步长(2)，且有df=2xds，fast共走了(df-s)/环长度(x)圈，slow共走了(ds-s)/环长度(x)圈
+
+详细推导
+
+![链表判断环入口1](img/链表判断环入口1.png)
+
+代码实现
+
+```链表判断环入口
+// 判断环入口节点
+function isRing(link) {
+  const head = link.head
+  let slow = null,
+    fast = head
+  // 直到第一次相遇
+  while (slow !== fast) {
+    if (!slow) slow = head
+    slow = slow.next
+    fast = fast.next.next
+  }
+  // 此时已经第一次相遇
+  // fast指针充当新指针，指向head，开始以慢指针同样的步长进行
+  fast = head
+  // 继续走s步
+  while (fast !== slow) {
+    slow = slow.next
+    fast = fast.next
+  }
+  // 相遇，此时fast指向的就为环入口
+  return fast
+}
+console.log(isRing(list)) // node3
+```
