更新浏览器系列

--- a/网络/计算机网络.md
+++ b/网络/计算机网络.md
@@ -149,7 +149,7 @@ tcp特点
 
 TCP的端点
 
-- 所谓tcp的连接端点并不是ip、端口、应用程序，二十套接字socket或者是插口，即IP:端口，这种才是tcp的端，tcp的套接字就是规定了ip地址与端口号。socket=IP地址:端口号
+- 所谓tcp的连接端点并不是ip、端口、应用程序，而是套接字socket或者是插口，即IP:端口，这种才是tcp的端，tcp的套接字就是规定了ip地址与端口号。socket=IP地址:端口号
 - 每一条tcp连接都规定了2个端，即2个套接字之间的通信socket在不同场景的含义也不同，这里是指tcp协议的socket
 
 停止等待协议
