--- a/vue/双向绑定与数据响应式.md
+++ b/vue/双向绑定与数据响应式.md
@@ -1,5 +1,7 @@
 # 双向绑定以及响应式原理
 
+![mvvm](./img/mvvm.png)
+
 - vue双向绑定的核心原理是使用观察者模式通过数据劫持以及发布订阅者模式实现更新视图，其中观察者模式通过defineProperty设置getter与setter来实现数据劫持，在getter中收集依赖，在setter中通知依赖更新
 - vue使用mvvm架构，其中m为model也就是数据模型，v为view，即DOM视图，vm就是viewModel视图模型
 - 原生DOM已经实现view=>model，也就是通过DOM事件监听，回调函数来实现改变数据
@@ -8,9 +10,13 @@
 
 ## 响应式原理
 
+![响应式](./img/响应式.png)
+
 - 数据响应式的任务就是，监听数据的改变，同步渲染view视图的变化，也就是数据变化DOM也更新内容
 
 ### 数据劫持
+
+![数据劫持](./img/数据劫持.png)
 
 代码演示
 
@@ -73,6 +79,8 @@ obj.age=3 // 没有劫持
 - Dep简单说就是一个订阅器，订阅某个属性的所有祖先对象，当这个属性变更时通知所有的祖先进行更新操作
 
 #### 递归劫持以及依赖收集
+
+![依赖收集](./img/依赖收集.png)
 
 ```js
 /* ----------------------数据监听器---------------------- */
@@ -149,6 +157,8 @@ Dep.prototype.notify = function () {
 - Dep为订阅构造器，用于实例化属性的订阅列表，即依赖收集。通过调用实例的添加订阅者以及通知订阅者方法，来实现添加属性依赖，以及通知数据变化
 
 ### 订阅者
+
+![数据响应式原理](./img/数据响应式原理.png)
 
 - 接下来实现订阅者构造器Watcher，其中订阅者需要做的就是当创建订阅者的时候把自身设置为未订阅状态，当通知更新的时候执行更新方法，当订阅者收到更新通知后需要对更新做自己的判断，所以需要一个自定义回调函数，传入的就是每次更新前后的数据
 
@@ -360,6 +370,8 @@ Compile.prototype.updateAttr = function (node, attrName, value) {
 以上大概都是数据响应式的核心了，接下来在数据响应式的基础上增加view=>model也就是利于事件监听来实现数据双向绑定
 
 ## 双向绑定
+
+![双向绑定](./img/双向绑定.png)
 
 - vue最核心的就是数据响应式，双向绑定只是利用原生DOM提供的事件监听来实现视图到模型的更新，而数据响应式的核心就是数据模型到视图的更新
 - 结合数据响应式以及DOM事件监听可以实现双向绑定，由于大部分只有表单元素才具有输入监听事件，那么只有表单元素才能实现数据的双向绑定
@@ -787,7 +799,7 @@ const vm = new SelfVue({
 
 效果图
 
-![数据响应式](img/数据响应式.gif)
+![数据响应式](./img/数据响应式.gif)
 
 ## 基于ES6的proxy实现
 
@@ -875,5 +887,324 @@ function defineReactive(data) {
 - 主要就是优化代码，使代码看起来更舒服，使用新语法更加简洁
 
 ```js
+// 监听器
+class Observer {
+  constructor(data) {
+    return this.defineReactive(data) // 返回代理对象，不是this
+  }
+  defineReactive(data) {
+    if (typeof data !== 'object' || data === null) return data
+    const dep = new Dep()
+    const that = this
+    const proxyConf = {
+      configurable: false,
+      enumerable: true,
+      get(target, key, receiver) {
+        const ownKeys = Reflect.ownKeys(target)
+        if (ownKeys.includes(key)) { // 判断自身属性，需要执行拦截
+          if (Dep.target) dep.addSub(Dep.target) // 第一次访问的时候收集依赖
+        }
+        const result = Reflect.get(target, key, receiver)
+        return that.defineReactive(result) // 如果是对象则再深度监听
+      },
+      set(target, key, value, receiver) {
+        if (value === target[key]) return true
+        const result = Reflect.set(target, key, value, receiver)
+        dep.notify() // 通知
+        return result
+      }
+    }
+    return new Proxy(data, proxyConf)
+  }
+}
+// 依赖收集器
+class Dep {
+  constructor() {
+    this.subs = [] // 存储依赖项
+  }
+  static target = null
+  notify() { // 通知
+    this.subs.forEach(watcher => watcher.update())
+  }
+  addSub(watcher) { // 添加依赖
+    this.subs.push(watcher)
+  }
+}
+// 订阅者
+class Watcher {
+  constructor(vm, key, cb) {
+    this.vm = vm
+    this.key = key
+    this.cb = cb
+    // value是用于存放未更新前的数据
+    this.value = this.get()
+  }
+  get() {
+    Dep.target = this
+    const value = this.vm.data[this.key] // getter触发依赖收集
+    Dep.target = null
+    return value
+  }
+  run() { // 执行
+    const newVal = this.vm.data[this.key]
+    const oldVal = this.value
+    if (newVal === this.value) return
+    this.value = newVal
+    this.cb.call(this, newVal, oldVal) // 执行更新回调
+  }
+  update() { // 更新
+    this.run()
+  }
+}
+```
 
+是不是发现使用ES6的语法很简洁，使用class来定义可以直接把原型方法、静态属性、构造方法都写在应该class中代码可读性也更高
+
+### ES6全部代码
+
+- 以下大概就是实现了数据响应式以及双向绑定，由于这里是模拟模板解析，就没有用到render函数以及virtual DOM，而是直接解析原有DOM结构，其实过程很类似
+
+```js
+<div id="app">
+  <h2 v-bind:name="" :name="">名字：{{name}}</h2>
+  <h1 v-bind:age="" :age="">年龄：{{age}}</h1>
+  设置年龄：<input v-model="age">
+  <button v-on:click="clickUp">年龄+1</button>
+  <button @click="clickDown">年龄-1</button>
+</div>
+<script>
+  // 监听器
+  class Observer {
+    constructor(data) {
+      return this.defineReactive(data) // 返回代理对象，不是this
+    }
+    defineReactive(data) {
+      if (typeof data !== 'object' || data === null) return data
+      const dep = new Dep()
+      const that = this
+      const proxyConf = {
+        configurable: false,
+        enumerable: true,
+        get(target, key, receiver) {
+          const ownKeys = Reflect.ownKeys(target)
+          if (ownKeys.includes(key)) { // 判断自身属性，需要执行拦截
+            if (Dep.target) dep.addSub(Dep.target) // 第一次访问的时候收集依赖
+          }
+          const result = Reflect.get(target, key, receiver)
+          return that.defineReactive(result) // 如果是对象则再深度监听
+        },
+        set(target, key, value, receiver) {
+          if (value === target[key]) return true
+          const result = Reflect.set(target, key, value, receiver)
+          dep.notify() // 通知
+          return result
+        }
+      }
+      return new Proxy(data, proxyConf)
+    }
+  }
+
+  // 依赖收集器
+  class Dep {
+    constructor() {
+      this.subs = [] // 存储依赖项
+    }
+    static target = null
+    notify() { // 通知
+      this.subs.forEach(watcher => watcher.update())
+    }
+    addSub(watcher) { // 添加依赖
+      this.subs.push(watcher)
+    }
+  }
+
+  // 订阅者
+  class Watcher {
+    constructor(vm, key, cb) {
+      this.vm = vm
+      this.key = key
+      this.cb = cb
+      // value是用于存放未更新前的数据
+      this.value = this.get()
+    }
+    get() {
+      Dep.target = this
+      const value = this.vm.data[this.key] // getter触发依赖收集
+      Dep.target = null
+      return value
+    }
+    run() { // 执行
+      const newVal = this.vm.data[this.key]
+      const oldVal = this.value
+      if (newVal === this.value) return
+      this.value = newVal
+      this.cb.call(this, newVal, oldVal) // 执行更新回调
+    }
+    update() { // 更新
+      this.run()
+    }
+  }
+
+  // 模拟vue解析DOM
+  class Compile {
+    constructor(vm) {
+      this.el = document.querySelector(vm.el)
+      this.vm = vm
+      this.init()
+    }
+    init() {
+      let fragment = document.createDocumentFragment()
+      fragment = this.elementToFragment(fragment)
+      this.compileNode(fragment)
+      this.el.appendChild(fragment)
+    }
+    elementToFragment(frag) {
+      let child = this.el.firstChild
+      while (child) {
+        frag.appendChild(child)
+        child = this.el.firstChild
+      }
+      return frag
+    }
+    compileNode(node) {
+      const that = this
+      const childNodes = node.childNodes
+      const reg = /\{\{(.*)\}\}/
+      Array.prototype.forEach.call(childNodes, node => {
+        const text = node.textContent
+        if (node.nodeType == 1) {
+          that.compileElement(node)
+        } else if (node.nodeType == 3 && reg.test(text)) {
+          that.compileText(node, reg.exec(text)[1])
+        }
+        if (node.childNodes && node.childNodes.length) {
+          that.compileNode(node)
+        }
+      })
+    }
+    compileText(node, key) {
+      const that = this
+      const val = this.vm.data[key]
+      this.updateText(node, val)
+      new Watcher(this.vm, key, (newVal, oldVal) => {
+        that.updateText(node, newVal)
+      })
+    }
+    compileElement(node) {
+      const that = this
+      const attrs = node.attributes
+      Array.prototype.forEach.call(attrs, (attr, key) => {
+        if (typeof key !== 'number') return
+        const attrName = attr.name
+        const attrVal = attr.value
+        if (that.isDirective(attrName)) {
+          that.compileDir(node, attrName, attrVal)
+        } else if (that.isEventDirective(attrName)) {
+          that.compileEventDir(node, attrName, attrVal)
+        } else if (that.isModelDirective(attrName)) {
+          that.compileModelDir(node, attrVal)
+        }
+        node.removeAttribute(attrName)
+      })
+    }
+    compileDir(node, attrName, attrVal) {
+      const that = this
+      const key = attrName.split(':')[1]
+      const newVal = this.vm.data[key]
+      if (newVal === attrVal) return
+      this.updateAttr(node, key, newVal)
+      new Watcher(this.vm, key, (newVal) => {
+        that.updateAttr(node, key, newVal)
+      })
+    }
+    compileEventDir(node, attrName, attrVal) {
+      const data = this.vm.data
+      const eventType = attrName.split(':')[1] || attrName.slice(1)
+      const cb = this.vm.methods[attrVal].bind(data)
+      node.addEventListener(eventType, cb)
+      new Watcher(this.vm, attrVal, (newVal) => {
+        node.removeEventListener(eventType, cb)
+        node.addEventListener(eventType, newVal.bind(data))
+      })
+    }
+    compileModelDir(node, attrVal) {
+      const that = this
+      const value = this.vm.data[attrVal]
+      that.updateView(node, value)
+      new Watcher(this.vm, attrVal, (newVal) => {
+        that.updateView(node, newVal)
+      })
+      node.addEventListener('input', (e) => {
+        this.vm.data[attrVal] = e.target.value
+      })
+    }
+    updateView(node, value) {
+      node.value = value === undefined || value === null ? '' : value
+    }
+    updateAttr(node, key, value) {
+      node[key] = value === undefined || value === null ? '' : value
+    }
+    updateText(node, newVal) {
+      node.textContent = newVal === undefined || newVal === null ? '' : newVal
+    }
+    isDirective(attrName) {
+      return attrName.indexOf('v-bind:') === 0 || attrName.indexOf(':') === 0
+    }
+    isEventDirective(attrName) {
+      return attrName.indexOf('@') === 0 || attrName.indexOf('v-on:') === 0
+    }
+    isModelDirective(attrName) {
+      return attrName.indexOf('v-model') === 0
+    }
+  }
+
+  // 组件构造器
+  class MyVue {
+    constructor(options) {
+      for (const key of Reflect.ownKeys(options)) {
+        this[key] = options[key]
+      }
+      this.proxyKeys(this.data)
+      this.data = new Observer(this.data)
+      new Compile(this)
+      this.mounted()
+    }
+    proxyKeys(data) {
+      Reflect.ownKeys(data).forEach(key => {
+        Object.defineProperty(this, key, {
+          get() {
+            return data[key]
+          },
+          set(val) {
+            data[key] = val
+          }
+        })
+      }, this)
+    }
+  }
+  const options = {
+    el: '#app',
+    data: {
+      name: 'Tom',
+      age: 8
+    },
+    methods: {
+      clickUp() {
+        console.log('clickUp')
+        this.age++
+      },
+      clickDown() {
+        console.log('clickDown')
+        this.age--
+      }
+    },
+    mounted() {
+      setTimeout((that) => {
+        that.data.name = 'jerry'
+      }, 2000, this)
+      console.log('挂载完成')
+    }
+  }
+  const vm = new MyVue(options)
+</script>
 ```
