--- a/算法/动态规划.md
+++ b/算法/动态规划.md
@@ -14,7 +14,7 @@
 
 斐波那契数列
 
-```代码实现
+```js 代码实现
 // 斐波那契数列
 function series(arr, num) {
   // 初始值
@@ -50,7 +50,7 @@ console.log(series(500))
 
 canvas画一个斐波那契数组图
 
-```斐波那契数组
+```js 斐波那契数组
 // 斐波那契数组
 const array = series(300)
 // 获取canvas
@@ -195,7 +195,7 @@ ctx.stroke()
 
 代码实现
 
-```动态规划
+```js 动态规划
 // 为了方便分析，填充了数组的第一个元素，使数组下标与任务对应
 const value = [null, 5, 1, 8, 4, 6, 3, 2, 4]
 const pre = [null, 0, 0, 0, 1, 0, 2, 3, 5]
@@ -248,7 +248,7 @@ console.log(dp(value, pre, 8)) // 13
 
 代码实现
 
-```爬楼梯
+```js 爬楼梯
 // 爬楼梯递归版，自上而下
 function way(layer, arr = []) {
   // 递归出口，0层，共有0种方法
