--- a/算法/贪心算法.md
+++ b/算法/贪心算法.md
@@ -29,7 +29,7 @@
 
 代码实现
 
-```支付找零
+```js 支付找零
 // 纸币面值
 const coins = [1, 2, 5, 10, 20, 50, 100]
 // 支付找零
@@ -61,7 +61,7 @@ console.log(pay(123, coins)) // {1: 1, 2: 1, 20: 1, 100: 1, count: 4}
 
 限制有限张纸币，求支付情况
 
-```条件找零
+```js 条件找零
 // 纸币面值以及张数
 const coins = [
   [1, 5],
